Fixed bug where browser in dark mode resulted in white text on white background in dialog box. Also fixed a broken test that specified exact error formatting that was not the formatting given when running with the exact packages in the lockfile.

--- a/src/ui/import-map-overrides.css
+++ b/src/ui/import-map-overrides.css
@@ -104,7 +104,6 @@
   max-width: 600px;
   margin: 0 auto;
   border: 4px solid navajowhite;
-  background-color: white;
   padding: 1em;
   left: 50%;
   right: auto;
